IVYPORTAL-9788: Various or urgent requests in IVYPORTAL S187 - Fixed bug: Broken UI in case list with long description case

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -575,6 +575,7 @@ span.case-details-document-add-link, span.task-details-document-add-link {
   padding-left: 10px;
   padding-right: 10px;
   min-width: 105px;
+  display: grid;
 }
 
 .case-header-data .case-header-default-cell {
